Fixed some layout issues, handling variable height top nav bar slightly better

--- a/src/components/Chat/ChatIndicator.styl
+++ b/src/components/Chat/ChatIndicator.styl
@@ -17,11 +17,10 @@
 
 
 .ChatIndicator {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     cursor: pointer;
-    font-size: 18px;
-    height: 100%;
+    padding-bottom: 0.1rem;
 
     .navbar-icon {
         display: inline-flex;
